# catalogue-populator

./: .gitignore  README.md  pyproject.toml
src/work_folder_generator/: authenticate.py  catalogue_generator.py  config.py  create_text_folder.py  pipeline.py
